--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,14 @@
 			<scope>runtime</scope>
 		</dependency>
 
+
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 		<!-- Enables MySQL database connection -->
 		<dependency>
 			<groupId>com.mysql</groupId>
